# sssom-api

./: .gitignore  Dockerfile  Makefile  README.md  api.Dockerfile  blazegraph.Dockerfile  docker-compose.yml  docs.md  process.sh  pyproject.toml  rdf4j_sssom.txt  requirements.txt  upload.Dockerfile
.github/workflows/: qc.yaml
backend/: .gitignore
backend/src/: depends.py  escape_query_chars.py  main.py  models.py  repository.py  settings.py  utils.py
config/: dataloader.xml
data/: RWStore.properties  dataloader.xml  load_solr.sh  log4j.properties  mappings.json  mappings_solr.json
data/monarch/: hp_doid_pistoia.sssom.tsv.ttl.good  ma_uberon_pat_impc.sssom.tsv.ttl.good  mp_doid_pistoia.sssom.tsv.ttl.good  mp_hp_eye_impc.sssom.tsv.ttl.good  mp_hp_hwt_impc.sssom.tsv.ttl.good  mp_hp_mgi_all.sssom.tsv.ttl.good  mp_hp_owt_impc.sssom.tsv.ttl.good  mp_hp_pat_impc.sssom.tsv.ttl.good  mp_hp_pistoia.sssom.tsv.ttl.good  mp_hp_xry_impc.sssom.tsv.ttl.good  ordo_doid_pistoia.sssom.tsv.ttl.good  ordo_mp_pistoia.sssom.tsv.ttl.good  pato_hp_pat_impc.sssom.tsv.ttl.good
data/ols/: ado.ols.sssom.tsv.ttl  aeo.ols.sssom.tsv.ttl  aero.ols.sssom.tsv.ttl  agro.ols.sssom.tsv.ttl  aism.ols.sssom.tsv.ttl  amphx.ols.sssom.tsv.ttl  apo.ols.sssom.tsv.ttl  apollo_sv.ols.sssom.tsv.ttl  aro.ols.sssom.tsv.ttl  bcgo.ols.sssom.tsv.ttl  bco.ols.sssom.tsv.ttl  (+179 more)
data2/: efo.ols.sssom.tsv
dataload/: Dockerfile  create_datafiles.sh  dataload.dockersh  load_into_neo4j.sh  load_into_solr.sh  requirements.txt
docker-api/: Dockerfile
docker-upload-triplestore/: Dockerfile  rdf4j_sssom.txt
src/: constants.py  depends.py  main.py  models.py  parser.py  registry_parser.py  settings.py  sparql_endpoint.py  utils.py
tests/: conftest.py  test_routers_mappings.py
(+20 files in other folders)
