[tool.poetry]
name = "sssom-api"
version = "0.1.0"
description = "\"The Simple Standard for Sharing Ontological Mappings (SSSOM) API is a tool for accessing ontological mappings between different ontologies.\""
authors = ["Anita Caron <anitac@ebi.ac.uk>"]
license = "http://www.apache.org/licenses/LICENSE-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
oaklib = "0.1.71"
sssom-schema = "^v0.9.4"
sssom = "^0.3.26"
toolz = "^0.12.0"
pyld = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.0.0"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
